<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Daily Income Expense Tracker</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_income_list">Income List</string>
    <string name="menu_expense_list">Expense List</string>
    <string name="menu_monthly_view">Monthly View</string>
    <string name="menu_weekly_view">Weekly View</string>
    <string name="menu_language">Language</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="add_income">Add Income</string>
    <string name="add_expense">Add Expense</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
