<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_incomeList"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_income_list" />
        <item
            android:id="@+id/nav_expenseList"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_expense_list" />
        <item
            android:id="@+id/nav_monthly"
            android:icon="@drawable/ic_monthly_calendar_svgrepo_com"
            android:title="@string/menu_monthly_view" />
        <item
        android:id="@+id/nav_weekly"
        android:icon="@drawable/ic_weekly"
        android:title="@string/menu_weekly_view" />
        <item
            android:id="@+id/nav_Language"
            android:icon="@drawable/ic_language"
            android:title="@string/menu_language" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
