<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.expensetracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addIncomeFragment"
            app:destination="@id/addIncomeFragment" />
        <action
            android:id="@+id/action_nav_home_to_addIncomeFragment2"
            app:destination="@id/addIncomeFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_nav_home_to_addExpenseFragment"
            app:destination="@id/addExpenseFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.expensetracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_income_list"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.expensetracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_expense_list"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.expensetracker.ui.tools.ToolsFragment"
        android:label="@string/menu_monthly_view"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.expensetracker.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.expensetracker.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/addIncomeFragment"
        android:name="com.example.expensetracker.AddIncomeFragment"
        android:label="fragment_add_income"
        tools:layout="@layout/fragment_add_income" />
    <fragment
        android:id="@+id/addExpenseFragment"
        android:name="com.example.expensetracker.AddExpenseFragment"
        android:label="AddExpenseFragment" />
</navigation>